# Pageloot-BE-task

./: README.md  manage.py  pyproject.toml
expenses/: admin.py  models.py  serializers.py  urls.py  views.py
expenses/migrations/: 0001_initial.py
pageloot_backend/: asgi.py  settings.py  urls.py  wsgi.py
